--- a/identity-service/package.json
+++ b/identity-service/package.json
@@ -24,6 +24,7 @@
     "ioredis": "^5.5.0",
     "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
+    "lodash": "^4.17.21",
     "mongoose": "^8.10.0",
     "rate-limit-redis": "^4.2.0",
     "rate-limiter-flexible": "^5.0.5",
